# cjm-fasthtml-interactions

./: .gitignore  .sesskey  README.md  demo_app.py  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_fasthtml_interactions/: _modidx.py
cjm_fasthtml_interactions/core/: context.py  html_ids.py  state_store.py
cjm_fasthtml_interactions/patterns/: async_loading.py  master_detail.py  modal_dialog.py  pagination.py  sse_connection_monitor.py  step_flow.py  tabbed_interface.py
core/: context.html  context.html.md  html_ids.html  html_ids.html.md  state_store.html  state_store.html.md
demo/: __init__.py  home.py  master_detail_demo.py  pagination_demo.py  step_flow_demo.py  tabbed_interface_demo.py
nbs/: index.ipynb  nbdev.yml
nbs/core/: context.ipynb  html_ids.ipynb  state_store.ipynb
nbs/patterns/: async_loading.ipynb  master_detail.ipynb  modal_dialog.ipynb  pagination.ipynb  sse_connection_monitor.ipynb  step_flow.ipynb  tabbed_interface.ipynb
patterns/: async_loading.html  async_loading.html.md  master_detail.html  master_detail.html.md  modal_dialog.html  modal_dialog.html.md  pagination.html  pagination.html.md  sse_connection_monitor.html  sse_connection_monitor.html.md  step_flow.html  step_flow.html.md  tabbed_interface.html  tabbed_interface.html.md
