[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-interactions"
dynamic = ["version"]
description = "Reusable user interaction patterns for FastHTML applications, providing the StepFlow multi-step wizard and AsyncLoadingContainer for asynchronous content loading."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'cjm_fasthtml_app_core>=0.0.18', 'cjm_fasthtml_daisyui', 'cjm_fasthtml_design_system>=0.0.9']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-interactions"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-interactions"

[project.entry-points.nbdev]
cjm_fasthtml_interactions = "cjm_fasthtml_interactions._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_interactions.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_interactions*"]

[tool.nbdev]
